# conversator

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_TODO.md
python/voice/: README.md  pyproject.toml
python/voice/.conversator/: state.sqlite
python/voice/.conversator/prompts/1a24859e/: working.md
python/voice/.conversator/prompts/1af2f6a9/: working.md
python/voice/.conversator/prompts/20c6dcc0/: working.md
python/voice/.conversator/prompts/33cc279f/: working.md
python/voice/.conversator/prompts/36e3f31b/: working.md
python/voice/.conversator/prompts/37c3de9e/: working.md
python/voice/.conversator/prompts/523e996f/: working.md
python/voice/dashboard-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
python/voice/dashboard-ui/src/: App.tsx  index.css
python/voice/dashboard-ui/src/api/: client.ts
python/voice/src/conversator_voice/: __init__.py  __main__.py  ambient_audio.py  builder_client.py  builder_manager.py  config.py  gemini_live.py  handlers.py  main.py  models.py  monitor.py  opencode_client.py  opencode_manager.py  opencode_sse_client.py  prompt_manager.py  relay_draft.py  session_state.py  state.py  subagent_conversation.py  subagent_threads.py  tools.py
python/voice/tests/: test_answer_confirmation_handlers.py  test_builder_client.py  test_e2e_workflow.py  test_gemini_live.py  test_handlers.py  test_opencode_integration.py  test_opencode_tool_roundtrip.py  test_project_selection.py  test_prompt_manager.py  test_state_persistence.py  test_subagent_conversation.py  test_thread_relay.py  test_tools.py
(+94 files in other folders)
